# notquiteparadise

./: index.html  pyproject.toml  scripts.engine.core.html  scripts.engine.html  scripts.engine.ui.elements.html  scripts.engine.ui.widgets.html  scripts.engine.world_objects.html  scripts.nqp.processors.html  tests.engine.html
.doctrees/: environment.pickle  index.doctree
.github/workflows/: nqp_checks.yml  nqp_docs.yml
nqp/: chronicle.html  component.html  core.constants.html  core.definitions.html  debug.html  dungen.html  effect.html  key.html  state.html  thought.html  ui.elements.html  ui.widgets.html  utility.html  world.html  world_objects.html
scripts/engine/: dungen.py  utility.py
