[tool.poetry]
name = "notquiteparadise"
version = "0.1.0"
description = ""
license = "MIT"
repository = "https://github.com/snayff/notquiteparadise"
authors = ["Snayff"]

[tool.poetry.dependencies]
python = "^3.7"
snecs = "^1.2.1"
pygame = "2.0.0dev10"
pygame-gui = "^0.5.6"
pytweening = "^1.0.3"
tcod = "^11.13.1"
# extras
sphinx = { version = "^3.0.4", optional = true }
sphinx_autodoc_typehints = { version = "^1.11.0", optional = true }
sphinx-autodoc-annotation = { version = "^1.0-1", optional = true }
sphinx-git = { version = "^11.0.0", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }

[tool.poetry.dev-dependencies]
mypy = { version = "^0.780", markers = "platform_python_implementation == 'cpython'" }
vulture = "^1.5"
isort = "^4.3.21"
black = { version = "^19.10b0", markers = "platform_python_implementation == 'cpython'" }
pytest = "^5.4.3"
pytest-cov = "^2.10.1"
# poetry sometimes nukes itself under pypy, uninstalling its own dependency
virtualenv = { version = "^20.0.33", markers = "platform_python_implementation != 'cpython'" }

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-git",
    "sphinx-rtd-theme"
]

[tool.black]
target-version = ['py37']
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_third_party = [""]
known_future_library = ["annotations"]
force_to_top = ["typing, __future__"]
indent = 4
lines_between_types = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

